tests/integration/features/project_statistics/91_user_provided_statistics_wrong_module/test.itest
#
# This test verifies the following functionality:
# If a user provides a non-existing path to a custom statistics generator,
# StrictDoc will terminate the execution and display an error message.
#
# FIXME: Migrate this test to %T.
#
# @relation(SDOC-SRS-154, scope=file)
#

RUN: cd %S/
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s
CHECK: error: Could not import a user-provided statistics generator: No module named 'statistics_generator'.
